tests/valid/trait/method_call_explicit_ufcs_local_annotated_generic_empty_struct_literal_receiver.facet
struct Token<T> {}

trait Runner {
  fn run(self: Self) -> ();
}

impl Runner for unrestricted Token<unrestricted isize> {
  fn run(self: Self) -> () {
    ()
  }
}

fn main() -> unrestricted () {
  let x: unrestricted Token<unrestricted isize> = Token<unrestricted isize> {};
  (<unrestricted Token<unrestricted isize> as Runner>::run x)
}
